--- a/notebooks/03_model_retrieval.ipynb
+++ b/notebooks/03_model_retrieval.ipynb
@@ -39,13 +39,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "86877e4c-3cf2-4501-8875-0090388f998c",
    "metadata": {},
    "outputs": [],
    "source": [
     "from metaflow import Flow\n",
-    "\n",
+    "# \n",
     "def get_latest_successful_run(flow_nm, tag):\n",
     "    \"Gets the latest successful run for a flow with a specific tag.\"\n",
     "    for r in Flow(flow_nm).runs(tag):\n",
@@ -78,12 +78,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
+   "id": "9a8230ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  change working directory to where flows are stored\n",
+    "import os \n",
+    "os.chdir('../flows')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "9f9186d3-c876-4641-b74f-7ecb36469550",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from model import NbowModel\n",
+    "from ml.model import NbowModel\n",
     "\n",
     "run = get_latest_successful_run('NLPFlow', 'deployment_candidate')\n",
     "model = NbowModel.from_dict(run.data.model_dict)"
@@ -107,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "635d53d9-9186-42ea-bf91-6ac460322b0c",
    "metadata": {},
    "outputs": [
@@ -115,29 +127,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "71/71 [==============================] - 0s 315us/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-10-25 13:07:04.717009: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
+      "\u001b[1m71/71\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[0.999181  ],\n",
-       "       [0.98211557],\n",
-       "       [0.999635  ],\n",
+       "array([[0.99926686],\n",
+       "       [0.9955354 ],\n",
+       "       [0.999947  ],\n",
        "       ...,\n",
-       "       [0.99945015],\n",
-       "       [0.9991339 ],\n",
-       "       [0.56526893]], dtype=float32)"
+       "       [0.99963254],\n",
+       "       [0.9985513 ],\n",
+       "       [0.10340603]], dtype=float32)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +150,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "predict_df = pd.read_parquet('predict.parquet')\n",
+    "predict_df = pd.read_parquet('../data/predict.parquet')\n",
     "preds = model.predict(predict_df['review'])\n",
     "preds"
    ]
@@ -168,14 +173,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "bc90fd83-c601-43c9-80f4-3d0414629506",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pyarrow as pa\n",
     "pa_tbl = pa.table({\"data\": preds.squeeze()})\n",
-    "pa.parquet.write_table(pa_tbl, \"sentiment_predictions.parquet\")"
+    "pa.parquet.write_table(pa_tbl, \"../data/sentiment_predictions.parquet\")"
    ]
   },
   {
@@ -203,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
