--- a/notebooks/01_data_exploration.ipynb
+++ b/notebooks/01_data_exploration.ipynb
@@ -1,12 +1,33 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be3f8205",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd ../src"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e7d65b4d-372a-42ce-b7ec-344ed8ff1072",
    "metadata": {},
    "source": [
     "This episode references this [notebook](https://github.com/outerbounds/tutorials/blob/main/nlp/nlp-1.ipynb).\n",
     "It will familiarize you with the dataset and the baseline relevant to the business problem we want to solve."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3db6604a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.metrics import accuracy_score, roc_auc_score"
    ]
   },
   {
@@ -27,21 +48,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6657028f-ceab-434b-b53d-453c82dced6c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "num of rows: 20377\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "df = pd.read_parquet('../data/train.parquet')\n",
+    "df = pd.read_parquet('../data/03_inputs/train.parquet')\n",
     "print(f'num of rows: {df.shape[0]}')"
    ]
   },
@@ -55,79 +67,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "7dccde6e-d538-4f3d-b65e-f6db7d623672",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>labels</th>\n",
-       "      <th>review</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Odd fit: I wanted to love this sweater but the...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Very comfy dress: The quality and material of ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Fits nicely but fabric a bit thin: I ordered t...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Great fit: Love these jeans, fit and style... ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Stretches out, washes poorly. wish i could ret...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   labels                                             review\n",
-       "0       0  Odd fit: I wanted to love this sweater but the...\n",
-       "1       1  Very comfy dress: The quality and material of ...\n",
-       "2       0  Fits nicely but fabric a bit thin: I ordered t...\n",
-       "3       1  Great fit: Love these jeans, fit and style... ...\n",
-       "4       0  Stretches out, washes poorly. wish i could ret..."
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.head()"
    ]
@@ -150,31 +93,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "541604f9-6882-4424-92f1-409d3f281e5b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Baseline Accuracy: 0.773\n",
-      "Baseline AUC: 0.5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from sklearn.metrics import accuracy_score, roc_auc_score\n",
-    "\n",
-    "valdf = pd.read_parquet(\"../data/valid.parquet\")\n",
-    "baseline_predictions = [1] * valdf.shape[0]\n",
-    "base_acc = accuracy_score(valdf.labels, \n",
-    "                          baseline_predictions)\n",
-    "base_rocauc = roc_auc_score(valdf.labels, \n",
-    "                            baseline_predictions)\n",
+    "val_df = pd.read_parquet(\"../data/03_inputs/valid.parquet\")\n",
+    "baseline_predictions = [1] * val_df.shape[0]\n",
+    "base_acc = accuracy_score(val_df.labels, baseline_predictions)\n",
+    "base_rocauc = roc_auc_score(val_df.labels, baseline_predictions)\n",
     "\n",
     "msg = 'Baseline Accuracy: {}\\nBaseline AUC: {}'\n",
-    "print(msg.format(round(base_acc,3), round(base_rocauc,3)))"
+    "print(msg.format(round(base_acc, 3), round(base_rocauc, 3)))"
    ]
   },
   {
