--- a/notebooks/02_model_class_testing.ipynb
+++ b/notebooks/02_model_class_testing.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c890f379",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd ../src"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "7dfa47c8",
    "metadata": {},
@@ -10,17 +20,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "40f80f58",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tensorflow as tf\n",
-    "from tensorflow.keras import layers, optimizers, regularizers\n",
-    "from sklearn.metrics import accuracy_score, roc_auc_score\n",
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "\n",
-    "import pandas as pd"
+    "import importlib\n",
+    "import pandas as pd\n",
+    "from models.bow import NbowModel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e437f60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# importlib.reload(NbowModel)"
    ]
   },
   {
@@ -33,39 +50,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "07a9a0ac",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Num of rows: 20377\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df = pd.read_parquet(\"../data/train.parquet\")\n",
+    "df = pd.read_parquet(\"../data/03_inputs/train.parquet\")\n",
     "print(f\"Num of rows: {df.shape[0]}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "cbd84ae2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Num of rows: 2264\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "val_df = pd.read_parquet(\"../data/valid.parquet\")\n",
+    "val_df = pd.read_parquet(\"../data/03_inputs/valid.parquet\")\n",
     "print(f\"Num of rows: {val_df.shape[0]}\")"
    ]
   },
@@ -78,70 +79,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "0e638d4d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class NbowModel:\n",
-    "    def __init__(self, vocab_sz):\n",
-    "        self.vocab_sz = vocab_sz\n",
-    "        # Instantiate the CountVectorizer\n",
-    "        self.cv = CountVectorizer(\n",
-    "            min_df=0.005,\n",
-    "            max_df=0.75,\n",
-    "            stop_words=\"english\",\n",
-    "            strip_accents=\"ascii\",\n",
-    "            max_features=self.vocab_sz,\n",
-    "        )\n",
-    "\n",
-    "        # Define the keras model\n",
-    "        inputs = tf.keras.Input(shape=(self.vocab_sz,), name=\"Input\")\n",
-    "        x = layers.Dropout(0.10)(inputs)\n",
-    "        x = layers.Dense(\n",
-    "            15,\n",
-    "            activation=\"relu\",\n",
-    "            kernel_regularizer=regularizers.L1L2(l1=1e-5, l2=1e-4),\n",
-    "        )(x)\n",
-    "        predictions = layers.Dense(\n",
-    "            1,\n",
-    "            activation=\"sigmoid\",\n",
-    "        )(x)\n",
-    "        self.model = tf.keras.Model(inputs, predictions)\n",
-    "        opt = optimizers.Adam(learning_rate=0.002)\n",
-    "        self.model.compile(\n",
-    "            loss=\"binary_crossentropy\", optimizer=opt, metrics=[\"accuracy\"]\n",
-    "        )\n",
-    "\n",
-    "    def fit(self, X, y):\n",
-    "        res = self.cv.fit_transform(X).toarray()\n",
-    "        self.model.fit(x=res, y=y, batch_size=32, epochs=10, validation_split=0.2)\n",
-    "\n",
-    "    def predict(self, X):\n",
-    "        res = self.cv.transform(X).toarray()\n",
-    "        return self.model.predict(res)\n",
-    "\n",
-    "    def eval_acc(self, X, labels, threshold=0.5):\n",
-    "        return accuracy_score(labels, self.predict(X) > threshold)\n",
-    "\n",
-    "    def eval_rocauc(self, X, labels):\n",
-    "        return roc_auc_score(labels, self.predict(X))\n",
-    "\n",
-    "    @property\n",
-    "    def model_dict(self):\n",
-    "        return {\"vectorizer\": self.cv, \"model\": self.model}\n",
-    "\n",
-    "    @classmethod\n",
-    "    def from_dict(cls, model_dict):\n",
-    "        \"Get Model from dictionary\"\n",
-    "        nbow_model = cls(len(model_dict[\"vectorizer\"].vocabulary_))\n",
-    "        nbow_model.model = model_dict[\"model\"]\n",
-    "        nbow_model.cv = model_dict[\"vectorizer\"]\n",
-    "        return nbow_model"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "d607d0ee",
    "metadata": {},
@@ -151,40 +88,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
+   "id": "c42808c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = NbowModel(vocab_sz=750)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b173406e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/10\n",
-      "\u001b[1m510/510\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 3ms/step - accuracy: 0.7876 - loss: 0.4506 - val_accuracy: 0.8810 - val_loss: 0.2956\n",
-      "Epoch 2/10\n",
-      "\u001b[1m510/510\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step - accuracy: 0.8821 - loss: 0.2972 - val_accuracy: 0.8751 - val_loss: 0.3036\n",
-      "Epoch 3/10\n",
-      "\u001b[1m510/510\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step - accuracy: 0.8892 - loss: 0.2863 - val_accuracy: 0.8790 - val_loss: 0.2947\n",
-      "Epoch 4/10\n",
-      "\u001b[1m510/510\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 3ms/step - accuracy: 0.8874 - loss: 0.2790 - val_accuracy: 0.8795 - val_loss: 0.2950\n",
-      "Epoch 5/10\n",
-      "\u001b[1m510/510\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step - accuracy: 0.8972 - loss: 0.2659 - val_accuracy: 0.8756 - val_loss: 0.2983\n",
-      "Epoch 6/10\n",
-      "\u001b[1m510/510\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step - accuracy: 0.8978 - loss: 0.2617 - val_accuracy: 0.8761 - val_loss: 0.3026\n",
-      "Epoch 7/10\n",
-      "\u001b[1m510/510\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step - accuracy: 0.9063 - loss: 0.2471 - val_accuracy: 0.8776 - val_loss: 0.3112\n",
-      "Epoch 8/10\n",
-      "\u001b[1m510/510\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step - accuracy: 0.9114 - loss: 0.2401 - val_accuracy: 0.8778 - val_loss: 0.3135\n",
-      "Epoch 9/10\n",
-      "\u001b[1m510/510\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 3ms/step - accuracy: 0.9126 - loss: 0.2320 - val_accuracy: 0.8737 - val_loss: 0.3235\n",
-      "Epoch 10/10\n",
-      "\u001b[1m510/510\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 3ms/step - accuracy: 0.9242 - loss: 0.2188 - val_accuracy: 0.8732 - val_loss: 0.3254\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model = NbowModel(vocab_sz=750)\n",
-    "model.fit(X=df[\"review\"], y=df[\"labels\"])"
+    "model.fit(X=df[\"review\"], y=df[\"labels\"], epochs=1)"
    ]
   },
   {
@@ -207,21 +126,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "4befaaab",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m71/71\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step\n",
-      "\u001b[1m71/71\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 1ms/step\n",
-      "Model Accuracy: 0.872\n",
-      "Model AUC: 0.915\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model_acc = model.eval_acc(val_df[\"review\"], val_df[\"labels\"])\n",
     "model_rocauc = model.eval_rocauc(val_df[\"review\"], val_df[\"labels\"])\n",
@@ -248,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "d6c8dc7b",
    "metadata": {},
    "outputs": [],
@@ -258,21 +166,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "384ae244",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m71/71\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 1ms/step\n",
-      "Model Accuracy: 0.872\n",
-      "\u001b[1m71/71\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 1ms/step  \n",
-      "Model AUC: 0.915\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model_loaded = NbowModel.from_dict(model_dict)\n",
     "print(\n",
