--- a/notebooks/02_model_class_testing.ipynb
+++ b/notebooks/02_model_class_testing.ipynb
@@ -174,11 +174,11 @@
     "model_loaded = NbowModel.from_dict(model_dict)\n",
     "print(\n",
     "    \"Model Accuracy:\",\n",
-    "    round(model_loaded.eval_acc(val_df[\"review\"], val_df[\"labels\"]), 3)\n",
+    "    round(model_loaded.eval_acc(val_df[\"review\"], val_df[\"labels\"]), 3),\n",
     ")\n",
     "print(\n",
     "    \"Model AUC:\",\n",
-    "    round(model_loaded.eval_rocauc(val_df[\"review\"], val_df[\"labels\"]), 3)\n",
+    "    round(model_loaded.eval_rocauc(val_df[\"review\"], val_df[\"labels\"]), 3),\n",
     ")"
    ]
   }
