--- a/notebooks/03_model_retrieval.ipynb
+++ b/notebooks/03_model_retrieval.ipynb
@@ -45,11 +45,14 @@
    "outputs": [],
    "source": [
     "from metaflow import Flow\n",
-    "# \n",
+    "\n",
+    "\n",
+    "#\n",
     "def get_latest_successful_run(flow_nm, tag):\n",
     "    \"Gets the latest successful run for a flow with a specific tag.\"\n",
     "    for r in Flow(flow_nm).runs(tag):\n",
-    "        if r.successful: return r"
+    "        if r.successful:\n",
+    "            return r"
    ]
   },
   {
@@ -84,8 +87,9 @@
    "outputs": [],
    "source": [
     "#  change working directory to where flows are stored\n",
-    "import os \n",
-    "os.chdir('../flows')"
+    "import os\n",
+    "\n",
+    "os.chdir(\"../flows\")"
    ]
   },
   {
@@ -97,7 +101,7 @@
    "source": [
     "from ml.model import NbowModel\n",
     "\n",
-    "run = get_latest_successful_run('NLPFlow', 'deployment_candidate')\n",
+    "run = get_latest_successful_run(\"NLPFlow\", \"deployment_candidate\")\n",
     "model = NbowModel.from_dict(run.data.model_dict)"
    ]
   },
@@ -150,8 +154,8 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "predict_df = pd.read_parquet('../data/predict.parquet')\n",
-    "preds = model.predict(predict_df['review'])\n",
+    "predict_df = pd.read_parquet(\"../data/predict.parquet\")\n",
+    "preds = model.predict(predict_df[\"review\"])\n",
     "preds"
    ]
   },
@@ -179,6 +183,7 @@
    "outputs": [],
    "source": [
     "import pyarrow as pa\n",
+    "\n",
     "pa_tbl = pa.table({\"data\": preds.squeeze()})\n",
     "pa.parquet.write_table(pa_tbl, \"../data/sentiment_predictions.parquet\")"
    ]
