--- a/notebooks/04_api_test.ipynb
+++ b/notebooks/04_api_test.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "284d79f6",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "8b1dbff2",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "cc7f8dd8",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,9 @@
    "source": [
     "endpoint_uri_base = \"http://127.0.0.1:8000/\"\n",
     "threshold_value = 0.5\n",
-    "sentiment_api_slug = f\"sentiment?review={urllib.parse.quote(review)}&threshold={threshold_value}\"\n",
+    "sentiment_api_slug = (\n",
+    "    f\"sentiment?review={urllib.parse.quote(review)}&threshold={threshold_value}\"\n",
+    ")\n",
     "url = endpoint_uri_base + sentiment_api_slug\n",
     "\n",
     "print(url)"
@@ -86,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "0181821d",
    "metadata": {},
    "outputs": [
@@ -95,17 +97,13 @@
      "output_type": "stream",
      "text": [
       "Review: \"As a self-proclaimed fashion enthusiast, I have tried countless clothing items from various brands, but the ComfyCloud 9000 Sweater has left me in awe! Not only did it exceed my expectations, but it has also become my go-to sweater for any occasion.\"\n",
-      "Sentiment: 0.5816033482551575\n",
+      "Sentiment: 0.568886935710907\n",
       "Prediction: positive\n"
      ]
     }
    ],
    "source": [
-    "response = requests.get(\n",
-    "    url,\n",
-    "    verify=False,\n",
-    "    proxies={'https': endpoint_uri_base}\n",
-    ")\n",
+    "response = requests.get(url, verify=False, proxies={\"https\": endpoint_uri_base})\n",
     "\n",
     "print(f'Review: \"{review}\"')\n",
     "print(f'Sentiment: {response.json()[\"sentiment\"]}')\n",
