--- a/notebooks/01_data_exploration.ipynb
+++ b/notebooks/01_data_exploration.ipynb
@@ -53,8 +53,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_parquet('../data/03_inputs/train.parquet')\n",
-    "print(f'num of rows: {df.shape[0]}')"
+    "df = pd.read_parquet(\"../data/03_inputs/train.parquet\")\n",
+    "print(f\"num of rows: {df.shape[0]}\")"
    ]
   },
   {
@@ -103,7 +103,7 @@
     "base_acc = accuracy_score(val_df.labels, baseline_predictions)\n",
     "base_rocauc = roc_auc_score(val_df.labels, baseline_predictions)\n",
     "\n",
-    "msg = 'Baseline Accuracy: {}\\nBaseline AUC: {}'\n",
+    "msg = \"Baseline Accuracy: {}\\nBaseline AUC: {}\"\n",
     "print(msg.format(round(base_acc, 3), round(base_rocauc, 3)))"
    ]
   },
